@@ -135,7 +135,7 @@ public class CaseService {
             ENGLAND_CASE_TYPE,
             ALL_CASES_QUERY).getCases()).orElse(Collections.emptyList());
 
-        return Stream.of(scotlandCases, englandCases).flatMap(Collection::stream).collect(toList());
+        return Stream.of(scotlandCases, englandCases).flatMap(Collection::stream).toList();
     }
 
     /**
@@ -410,7 +410,7 @@ public class CaseService {
         return searchEnglandScotlandCases(authorisation, query)
             .stream()
             .map(CaseDetails::getId)
-            .collect(toList());
+            .toList();
     }
 
     /**
